p/themes/base-theme/frss.css
/* ... */
@supports not (scrollbar-width: thin) {
	.scrollbar-thin::-webkit-scrollbar {
		background-color: var(--frss-scrollbar-track);
		width: 8px;
	}

	.scrollbar-thin:hover::-webkit-scrollbar {
		background-color: var(--frss-scrollbar-track-hover);
	}

	.scrollbar-thin::-webkit-scrollbar-thumb {
		background-color: var(--frss-scrollbar-handle);
		display: unset;
		border-radius: 5px;
	}

	.scrollbar-thin:hover::-webkit-scrollbar-thumb {
		background-color: var(--frss-scrollbar-handle-hover);
	}
}

/*=== Tree */
.tree {
	margin: 0;
	list-style: none;
	overflow-x: hidden;
}

.tree-folder-items {
	padding: 0;
	list-style: none;
	transition: max-height .3s linear;
}

.tree-folder-title {
	padding-top: var(--frss-padding-top-bottom);
	padding-bottom: var(--frss-padding-top-bottom);
}

.tree-folder-title .title {
	display: inline-block;
	width: 100%;
	vertical-align: middle;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.tree-folder-items > .item {
	display: block;
	white-space: nowrap;
}

.tree-folder-items > .item > a {
	display: inline-block;
	vertical-align: middle;
	width: calc(100% - 32px);
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.tree-folder-items .item.feed {
	position: relative;
}

/*=== STRUCTURE */
/*===============*/
/*=== Header */
a:hover .logo {
	filter: brightness(1.4);
	transition: filter 0.1s linear;
}

@media (min-width: 841px) {
	.header .logo-wrapper a {
		display: none;
	}

	.header .group {
		flex-direction: column;
	}

	.header .nav-header {
		padding: 1rem 0.5rem 2rem 0.5rem;
		display: flex;
		flex-direction: column;
		height: 100vh;
		box-sizing: border-box;
		justify-content: space-between;
	}

	.header #header_menu_configs .dropdown {
		margin-top: 1rem;
	}

	.header .btn .label {
		display: block;
		font-size: 0.6rem;
	}

	header.header .dropdown-open-right-to-top .dropdown-menu::after {
		border-width: 0 0 1px 1px;
		top: auto;
		right: auto;
		left: -6px;
		bottom: 22px;
	}

	header.header .dropdown-open-right-to-top .dropdown-menu {
		bottom: -12px;
	}

	header.header .dropdown-menu {
		left: calc(100% + 0.5rem);
	}

	header.header .dropdown-open-right-to-bottom .dropdown-menu::after {
		border-width: 0 0 1px 1px;
		top: 16px;
		right: auto;
		left: -6px;
		bottom: auto;
	}

	header.header .dropdown-open-right-to-bottom .dropdown-menu {
		top: -10px;
	}

}

input[type="search"] {
	-webkit-appearance: none; /* stylelint-disable-line property-no-vendor-prefix */
}

/*=== Body */
#global {
	background: inherit;
	display: table;
	width: 100%;
	height: calc(100vh - (calc(2.5rem + 2 * var(--frss-padding-top-bottom) + 1px)));
	table-layout: fixed;
}

#stream:not(.alert-warn) {
	background: inherit;
}

.aside + .close-aside {
	display: none;
}

.aside .logo-wrapper {
	text-align: center;
	padding: 0.5rem 1rem;
}

.aside .logo-wrapper .logo {
	padding: 0.5rem;
	display: inline-block;
	height: 1.5rem;
	vertical-align: middle;
}

.prompt .logo-wrapper .logo {
	margin: 2rem;
	height: 1.5rem;
}

.aside .nav-inner {
	padding-bottom: 10rem;
	width: 300px;
	height: 100vh;
	overflow-x: hidden;
	overflow-y: auto;
	box-sizing: border-box;
}

/*=== Aside main page */
.aside_feed .category .title {
	width: calc(100% - 35px);
}

.aside_feed .category .title:not([data-unread="0"]) {
	width: calc(100% - 75px);
}

.aside_feed .tree-folder.category .tree-folder-title .title.error .icon {
	margin: 0 0.5rem;
	padding: 0;
}

.aside_feed .tree-folder-title .icon,
.aside_feed .tree-folder-items .feed .icon {
	margin: 0 0.5rem 0 0;
}

.aside_feed .tree-folder-items .feed .favicon {
	padding: 0;
}

.aside_feed .tree-folder-items .item.feed {
	padding: var(--frss-padding-top-bottom) 0.75rem;
}

.aside_feed .tree-folder-items:not(.active) {
	margin: 0;
	padding: 0;
	max-height: 0;
	border: none;
	overflow: hidden;
}

.aside_feed .tree-folder-items .dropdown {
	vertical-align: top;
}

.aside_feed .tree-folder-items .dropdown-menu {
	left: 0;
}

.aside_feed .tree-folder-items .item .dropdown-toggle > .icon {
	visibility: hidden;
	cursor: pointer;
}

.aside_feed .tree-folder-items .item .dropdown-target:target ~ .dropdown-toggle > .icon,
.aside_feed .tree-folder-items .item:hover .dropdown-toggle > .icon,
.aside_feed .tree-folder-items .item.active .dropdown-toggle > .icon {
	visibility: visible;
}

.aside .toggle_aside:hover,
#slider .toggle_aside:hover,
#overlay .close:hover,
.dropdown-menu .toggle_aside:hover {
	background-color: var(--frss-darken-background-hover-transparent);
}

/*=== New article notification */
#new-article {
	display: none;
}

#new-article > a {
	padding: calc(0.25rem + var(--frss-padding-top-bottom)) 1rem;
	display: block;
}

/*=== Day indication */
.day {
	background: inherit;
}

.day .name {
	position: absolute;
	right: 0;
	width: 50%;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

/*=== Feed article header and footer */
.flux_header {
	background: inherit;
	position: relative;
}

.flux .flux_header .item {
	white-space: nowrap;
}

.flux .flux_header .item .item-element {
	padding: var(--frss-padding-top-bottom) 0;
	line-height: 1.5rem;
}

.flux .flux_header .item.manage .item-element,
.flux .flux_header .item.website .item-element,
.flux .flux_header .item.link .item-element {
	padding-left: var(--frss-padding-flux-items);
	padding-right: var(--frss-padding-flux-items);
}

.flux .item.manage,
.flux .item.link {
	width: calc(1rem + 2 * var(--frss-padding-flux-items));
}

.flux .item.website {
	width: 200px;
}

.flux:not(.current):hover .websitenone .item.title {
	max-width: calc(100% - 3 * (2 * var(--frss-padding-flux-items) + 16px));
}

.flux .websiteicon .item.website {
	width: calc(2 * var(--frss-padding-flux-items) + 16px);
}

.flux:not(.current):hover .websiteicon .item.title {
	max-width: calc(100% - 4 * (2 * var(--frss-padding-flux-items) + 16px));
}

.flux .websitename .item.website {
	width: 150px;
}
/* ... */

